[package]
name = "oxide-auth-db"
version = "0.3.0"
authors = ["liujing <liujingb@mail.taiji.com.cn>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
description = "An implement of DB registrar with configurable databases."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2", "redis"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
oxide-auth = { version = "0.6.0", path = "../oxide-auth" }
once_cell = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
r2d2_redis = {version = "0.14", optional = true }
url = "2"
anyhow = "1.0"

[dev-dependencies]
testcontainers-modules = { version = "0.14" , features = ["blocking", "redis"] }
oxide-auth-actix = { version = "0.3.0", path = "../oxide-auth-actix" }
actix = "0.13"
actix-web = "4.2.1"
env_logger = "0.9"
futures = "0.3"
r2d2_redis = {version = "0.14"}
reqwest = {version="0.11.10", features = ["blocking"]}
serde_urlencoded = "^0.7"

[features]
default = ["with-redis"]
with-redis = ["r2d2_redis"]

